[package]
name = "nezha_sdc"
version = "0.1.0"
edition = "2018"
authors = ["ez4yunfeng2<ez4yunfeng2@stu.hunau.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
iotest = []

[dependencies]
log = "0.4"
bitflags = "1.3.2"
vcell = "0.1.3"
volatile-register = "0.2.1"
embedded-hal = "0.2.6"
lazy_static = { version = "1", features = ["spin_no_std"] }
nb = "1"
spin = "0.9.2"
fat32 = "0.2.0"
block_device = "0.1.2"
static_assertions = "1.1.0"
aligned = "0.4"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv", rev = "418c1053", features = ["inline-asm"] }